--- a/index.html
+++ b/index.html
@@ -6,17 +6,40 @@
         <style>
             body {
                 font-family: system-ui;
-                background: #111;
-                color: #eee;
-                margin: 0;
-                display: flex;
-                flex-direction: column;
+                <!doctype html>
+                <html lang="en">
+                <head>
+                  <meta charset="utf-8" />
+                  <title>DES & AES Round Dance – Phase 1</title>
+                  <meta name="viewport" content="width=device-width, initial-scale=1" />
+                  <link rel="stylesheet" href="styles.css" />
+                </head>
+                <body>
+                  <h1>DES / AES Bit Jumbler</h1>
+
+                  <div class="controls">
+                    <button id="desBtn" class="cipher-btn active">DES</button>
+                    <button id="aesBtn" class="cipher-btn">AES</button>
+                  </div>
+
+                  <label>
+                    Round
+                    <input type="range" id="roundSlider" min="0" max="16" value="0" />
+                    <span id="roundLbl">0</span>
+                  </label>
+
+                  <!-- 8×8 grid (64 bit) -->
+                  <svg id="bitGrid" width="256" height="256"></svg>
+
+                  <!-- avalanche mini-chart -->
+                  <svg id="avalancheChart" width="300" height="100"></svg>
+
+                  <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
+                  <script src="main.js"></script>
+                </body>
+                </html>
                 align-items: center;
-            }
-            h1 {
-                margin: 0.4em 0 0.2em;
-            }
-            #grid line {
+
                 stroke: #444;
             }
             #grid rect {
@@ -27,14 +50,7 @@
                 stroke: #0ff;
                 stroke-width: 2;
             }
-            input[type="range"] {
-                width: 320px;
-                margin: 1em 0;
-            }
-            button {
-                margin: 0 0.3em;
-            }
-        </style>
+
     </head>
     <body>
         <h1>DES / AES Round Dance</h1>
