--- a/index.html
+++ b/index.html
@@ -28,5 +28,21 @@
 
         <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
         <script src="main.js"></script>
+
+        <h1>DES / AES Bit Jumbler</h1>
+
+        <!-- NEW: passphrase box -->
+        <div class="key-box">
+            <input
+                id="passInput"
+                type="text"
+                placeholder="enter any passphrase"
+            />
+            <button id="deriveBtn">Derive Key</button>
+            <p id="keyDisplay">key: <span>-</span></p>
+        </div>
+
+        <div class="controls">…</div>
+        …
     </body>
 </html>
