--- a/index.html
+++ b/index.html
@@ -1,47 +1,77 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <meta charset="utf-8" />
-        <title>DES & AES Round Dance – Phase 1</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="stylesheet" href="styles.css" />
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>AES / DES Step Visualizer</title>
+        <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-        <h1>DES / AES Bit Jumbler</h1>
+        <header>
+            <h1>AES / DES Step Visualizer — Educational</h1>
+        </header>
 
         <div class="controls">
-            <button id="desBtn" class="cipher-btn active">DES</button>
-            <button id="aesBtn" class="cipher-btn">AES</button>
+            <label
+                >Plaintext:
+                <input id="textInput" type="text" value="Hello AES/DES!"
+            /></label>
+            <label
+                >Key: <input id="keyInput" type="text" value="mysecretkey12345"
+            /></label>
+            <label
+                >Cipher:
+                <select id="cipherSelect">
+                    <option value="aes">AES-like</option>
+                    <option value="des">DES-like</option>
+                </select>
+            </label>
+            <label
+                >Rounds:
+                <select id="roundCount">
+                    <option value="4">4</option>
+                    <option value="8" selected>8</option>
+                    <option value="10">10</option>
+                </select>
+            </label>
+            <button id="startBtn">Start</button>
         </div>
 
-        <label>
-            Round
-            <input type="range" id="roundSlider" min="0" max="16" value="0" />
-            <span id="roundLbl">0</span>
-        </label>
+        <main class="layout">
+            <div class="panel">
+                <strong>State Visualization</strong>
+                <div id="stateTitle" class="step-info">Press Start</div>
+                <div id="stateGrid" class="vis"></div>
 
-        <!-- 8×8 grid (64 bit) -->
-        <svg id="bitGrid" width="256" height="256"></svg>
+                <div class="controls-row">
+                    <button id="prevBtn">Prev</button>
+                    <button id="nextBtn">Next</button>
+                    <button id="playBtn">Play</button>
+                    <button id="pauseBtn" disabled>Pause</button>
+                    <button id="resetBtn">Reset</button>
+                    <div class="small">
+                        Step: <span id="stepCounter">0</span>
+                    </div>
+                </div>
 
-        <!-- avalanche mini-chart -->
-        <svg id="avalancheChart" width="300" height="100"></svg>
+                <div id="roundInfo" class="round"></div>
+                <div id="stepInfoText" class="step-info"></div>
+            </div>
 
-        <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
-        <script src="main.js"></script>
+            <div class="panel">
+                <strong>Hex / Output</strong>
+                <div id="hexOut" class="hexout"></div>
+                <div id="logArea" class="log"></div>
+            </div>
+        </main>
 
-        <h1>DES / AES Bit Jumbler</h1>
+        <footer>
+            <p>
+                This tool visualizes AES-like and DES-like encryption steps for
+                learning purposes only.
+            </p>
+        </footer>
 
-        <!-- NEW: passphrase box -->
-        <div class="key-box">
-            <input
-                id="passInput"
-                type="text"
-                placeholder="enter any passphrase"
-            />
-            <button id="deriveBtn">Derive Key</button>
-            <p id="keyDisplay">key: <span>-</span></p>
-        </div>
-
-        <div class="controls">…</div>
+        <script src="script.js"></script>
     </body>
 </html>
